[metadata]
description-file = README.md

[coverage:run]
source = dna_sequence_analysis_tool
omit = 
    */tests/*
    */_version.py
    */__main__.py

[coverage:report]
show_missing = true
skip_covered = true

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .venv,
    venv,
    .mypy_cache,
    .pytest_cache
per-file-ignores =
    # Allow for now, but should be fixed
    tests/*: S101
    */__init__.py: F401
